k3s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lan-wx-db
  namespace: lan-wx
  labels:
    app: lan-wx-api
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: lan-wx-db-pod
  template:
    metadata:
      labels:
        pod-label: lan-wx-db-pod
    spec:
      containers:
        - name: postgres
          image: duvel/postgis:10-alpine
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
              subPath: lan-wx-data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: lan-wx-api-ssd-claim
---
apiVersion: v1
kind: Service
metadata:
  name: lan-wx-db
  namespace: lan-wx
  labels:
    app: lan-wx-api
spec:
  selector:
    pod-label: lan-wx-db-pod
  ports:
    - protocol: TCP
      port: 5432
