k3s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lan-wx-api
  namespace: lan-wx
  labels:
    app: lan-wx-api
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: lan-wx-api-pod
  template:
    metadata:
      labels:
        pod-label: lan-wx-api-pod
    spec:
      containers:
        - name: lan-wx-api
          image: cqlanus/lan-wx-api:arm64
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: lan-wx-api
  namespace: lan-wx
  labels:
    app: lan-wx-api
spec:
  selector:
    pod-label: lan-wx-api-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
