k3s/ingress2.yaml
## lan-wx-api/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: lan-wx
  name: lan-wx-api-ingress2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - "lan-wx-api.chrislanus.com" # Host to access nextcloud
    secretName: "lan-wx-api-prod-tls" # Name of the certifciate (see kubectl get certificate -A)
  rules:
  - host: "lan-wx-api.chrislanus.com" # Host to access nextcloud
    http:
      paths:
        - path: /  # We will access NextCloud via the URL https://nextcloud.<domain.com>/
          backend:
            serviceName: lan-wx-api
            servicePort: 80 # Mapping to the port (see kubectl get services -n nextcloud)
